# AeroHalo360

./: CHANGELOG.md  CONTRIBUTING.md  PACKAGE_MANIFEST.txt  README.md  SECURITY.md  TEST_REPORT_v0.2.1-alpha.md
aero_halo_360/: CMakeLists.txt  package.xml
aero_halo_360/config/: default.yaml  flight_low_speed.yaml  indoor_low_speed.yaml  install_x7_mid360.example.yaml  mission_planner_demo.yaml  outdoor_low_speed.yaml  self_masks_x7_mid360.yaml
aero_halo_360/include/aero_halo_360/: cloud_processor.hpp  diagnostics.hpp  inflation.hpp  pointcloud_validation.hpp  sectorizer.hpp  self_mask.hpp  source_timestamp.hpp  temporal_filter.hpp  types.hpp  watchdog.hpp
aero_halo_360/launch/: _config_layering.py  _replay_utils.py  aero_halo_360.launch.py  debug_rviz.launch.py  mission_planner_demo.launch.py  replay_rosbag.launch.py
aero_halo_360/msg/: SectorDistances.msg
aero_halo_360/rviz/: aero_halo_360.rviz
aero_halo_360/scripts/: benchmark_latency.py  check_mavlink.py  check_sector_directions.py  mavlink_obstacle_sender.py  plot_sector_log.py  replay_to_mavlink.py  synthetic_cloud_generator.py
aero_halo_360/src/: cloud_processor_node.cpp  diagnostics.cpp  inflation.cpp  pointcloud_validation.cpp  sectorizer.cpp  self_mask.cpp  source_timestamp.cpp  temporal_filter.cpp  watchdog.cpp
aero_halo_360/test/: test_config_layering.py  test_inflation.cpp  test_mavlink_sender_logic.py  test_pointcloud_validation.cpp  test_replay_utils.py  test_sector_mapping.cpp  test_self_mask.cpp  test_source_timestamp.cpp  test_temporal_filter.cpp  test_watchdog.cpp
docs/: architecture.md  ardupilot_setup.md  fault_matrix.md  hardware_wiring.md  performance_benchmark.md  quick_start.md  roadmap.md  safety_notes.md  test_sop.md  tuning_guide.md
nano_deploy/: 00_install_ros2_humble.sh  01_install_dependencies.sh  02_build_release.sh  03_check_environment.sh  04_preflight.sh  05_health_check.sh  06_install_systemd.sh  07_package_release.sh  08_static_checks.py  README_NANO.md
nano_deploy/lib/: common.sh
systemd/: aero-halo-360-cloud.service.in  aero-halo-360-health.service.in  aero-halo-360-health.timer  aero-halo-360-sender.service.in  aero-halo-360-tf.service.in  aero-halo-360.env.example  livox-mid360.service.in
