<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aero_halo_360</name>
  <version>0.2.1</version>
  <description>将 360 度激光雷达点云转换为 ArduPilot MAVLink OBSTACLE_DISTANCE 消息的 ROS 2 避障模块</description>
  <maintainer email="aerohalo360@users.noreply.github.com">AeroHalo360 maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_test</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

